# dolfinx

./: .bzrignore  .clang-format  .clang-tidy  .cmake-format  .dir-locals.el  .drone.yml  .flake8  .gitattributes  .gitignore  .hgignore  .mailmap  AUTHORS  BUGS  CITATION.cff  CMakeLists.txt  CMakeLists.txt.in  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  ChangeLog  ChangeLog.rst  Dockerfile  Doxyfile  INSTALL  Makefile  Makefile.am  Makefile.in  README  README.md  README.rst  RELEASE.md  SConstruct  SECURITY.md  TESTING  TODO  TODO_BuildSystem  _expr_evaldouble0.c  _expr_evalfloat0.c  azure-pipelines.yml  bitbucket-pipelines.yml  (+37 more)
bench/: CMakeLists.txt  README  SConscript  bench  bench.py  plot.py
bench/common/: run-bench
bench/la/: bench.py
bench/mesh/: SConstruct  bench.py  main.cpp
cmake/post-install/: CMakeLists.txt
cpp/: .clang-format  CMakeLists (1).txt:Zone.Identifier  CMakeLists.txt  CMakeLists100.txt  GUIDELINES.md  main.cpp:Zone.Identifier  poisson(10).py  poisson.py:Zone.Identifier  ruff.toml  vcpkg.json
cpp/.vcpkg-overlay/: README.md
cpp/demo/: CMakeLists.txt  README  README.md
cpp/doc/: CMakeLists.txt  Doxyfile  Makefile  README  README.md  doc-requirements.txt
cpp/dolfin/: CMakeLists.txt  dolfin.h
cpp/dolfinx/: CMakeLists.txt  dolfinx.h
cpp/test/: CMakeLists.txt  expr.py  expression.cpp  graph.cpp  interpolation.cpp  interpolation.py  io.cpp  main.cpp  matrix.cpp  poisson.py  vcpkg.json  vector.cpp
demo/: CMakeLists.txt  README  SConscript  cmake.local  run_all.py
dolfin/: CMakeLists.txt  SConscript  dolfin.h  dolfin.pc.cmake.in  dolfin.pc.in  dolfin_simplex_tools.h  dolfin_write_medit.h  predicates.h  scons.cfg
dolfin/adaptivity/: Adaptive.cpp  Adaptive.h  AdaptiveDatum.cpp  AdaptiveDatum.h  AdaptiveLinearVariationalSolver.cpp  AdaptiveLinearVariationalSolver.h  AdaptiveNonlinearVariationalSolver.cpp  AdaptiveNonlinearVariationalSolver.h  AdaptiveObjects.cpp  AdaptiveObjects.h  AdaptiveSolver.cpp  AdaptiveSolver.h  AdaptiveVariationalSolver.cpp  AdaptiveVariationalSolver.h  CMakeLists.txt  ErrorControl.cpp  ErrorControl.h  Extrapolation.cpp  Extrapolation.h  GenericAdaptiveVariationalSolver.cpp  GenericAdaptiveVariationalSolver.h  GoalFunctional.cpp  GoalFunctional.h  LocalAssembler.cpp  LocalAssembler.h  Reconstruction.cpp  Reconstruction.h  SpecialFacetFunction.cpp  SpecialFacetFunction.h  TimeSeries.cpp  TimeSeries.h  TimeSeriesHDF5.cpp  TimeSeriesHDF5.h  adapt.cpp  adapt.h  adaptivesolve.cpp  adaptivesolve.h  dolfin_adaptivity.h  marking.cpp  marking.h  (+2 more)
dolfin/ale/: ALE.cpp  ALE.h  ALEType.h  CMakeLists.txt  HarmonicSmoothing.cpp  HarmonicSmoothing.h  MeshDisplacement.cpp  MeshDisplacement.h  Poisson1D.form  Poisson1D.ufl  Poisson2D.form  Poisson2D.ufl  Poisson3D.form  Poisson3D.ufl  TransfiniteInterpolation.cpp  TransfiniteInterpolation.h  dolfin_ale.h
dolfin/common/: Array.cpp  Array.h  ArrayView.h  CMakeLists.txt  Hierarchical.h  IndexSet.h  List.h  MPI.cpp  MPI.h  MPICommWrapper.cpp  MPICommWrapper.h  MPIObject.h  NoDeleter.h  RangedIndexSet.h  Set.h  SubSystemsManager.cpp  SubSystemsManager.h  TimeDependent.cpp  TimeDependent.h  Timer.cpp  Timer.h  UniqueIdGenerator.cpp  UniqueIdGenerator.h  Variable.cpp  Variable.h  constants.h  defines.cpp  defines.h  dolfin_common.h  dolfin_doc.h  init.cpp  init.h  mpiutils.h  real.cpp  real.h  simple_array.h  timing.cpp  timing.h  tuple_serialization.h  types.h  (+4 more)
dolfin/elements/: ElementLibrary.cpp  ProjectionLibrary.cpp  ProjectionLibrary.h  dolfin_elements.h  element_library.inc  elements.py  generate.py  generate_elements.py  generate_projections.py  projection_library.inc
dolfin/fem/: Assembler.cpp  Assembler.h  AssemblerBase.cpp  AssemblerBase.h  AssemblerTools.cpp  AssemblerTools.h  BasisFunction.h  BoundaryCondition.cpp  BoundaryCondition.h  ButcherScheme.cpp  ButcherScheme.h  CCFEMAssembler.cpp  CCFEMAssembler.h  CCFEMDofMap.cpp  CCFEMDofMap.h  CCFEMForm.cpp  CCFEMForm.h  CMakeLists.txt  DirichletBC.cpp  DirichletBC.h  DiscreteOperator.cpp  DiscreteOperator.h  DiscreteOperators.cpp  DiscreteOperators.h  DofMap.cpp  DofMap.h  DofMapBuilder.cpp  DofMapBuilder.h  DofMapSet.cpp  DofMapSet.h  DomainAssigner.cpp  DomainAssigner.h  EqualityBC.cpp  EqualityBC.h  Equation.cpp  Equation.h  FiniteElement.cpp  FiniteElement.h  Form.cpp  Form.h  (+72 more)
dolfin/function/: CCFEMFunction.cpp  CCFEMFunction.h  CCFEMFunctionSpace.cpp  CCFEMFunctionSpace.h  CMakeLists.txt  Coefficient.cpp  Coefficient.h  CoefficientAssigner.cpp  CoefficientAssigner.h  Constant.cpp  Constant.h  ConstantFunction.cpp  ConstantFunction.h  Data.cpp  Data.h  DiscreteFunction.cpp  DiscreteFunction.h  Expression.cpp  Expression.h  Function.cpp  Function.h  FunctionAXPY.cpp  FunctionAXPY.h  FunctionAssigner.cpp  FunctionAssigner.h  FunctionSpace.cpp  FunctionSpace.h  GenericFunction.cpp  GenericFunction.h  GenericFunctionSpace.cpp  GenericFunctionSpace.h  LagrangeInterpolator.cpp  LagrangeInterpolator.h  MultiMeshCoefficientAssigner.cpp  MultiMeshCoefficientAssigner.h  MultiMeshFunction.cpp  MultiMeshFunction.h  MultiMeshFunctionSpace.cpp  MultiMeshFunctionSpace.h  MultiMeshSubSpace.cpp  (+22 more)
dolfin/generation/: Box.cpp  Box.h  BoxMesh.cpp  BoxMesh.h  CGALMeshBuilder.h  CMakeLists.txt  CSGCGALDomain2D.cpp  CSGCGALDomain2D.h  CSGCGALMeshGenerator2D.cpp  CSGCGALMeshGenerator2D.h  CSGCGALMeshGenerator3D.cpp  CSGCGALMeshGenerator3D.h  CSGGeometries3D.cpp  CSGGeometries3D.h  CSGGeometry.cpp  CSGGeometry.h  CSGMeshGenerator.cpp  CSGMeshGenerator.h  CSGOperators.cpp  CSGOperators.h  CSGPrimitive.h  CSGPrimitives.h  CSGPrimitives2D.cpp  CSGPrimitives2D.h  CSGPrimitives3D.cpp  CSGPrimitives3D.h  EllipseMesh.cpp  EllipseMesh.h  EllipsoidMesh.cpp  EllipsoidMesh.h  GeometryToCGALConverter.cpp  GeometryToCGALConverter.h  Interval.cpp  (+64 more)
python/: .isort.cfg  CMakeLists.txt  Makefile  README.md  README.rst  build-and-run-requirements.txt  build-requirements.txt  conda-env-oneapi.yml  conda-macos-test-env.yml  conda-oneapi-test-env.yml  mwe.py  pyproject.toml  setup.cfg  setup.py  vcpkg.json
test/: CMakeLists.txt  README  SConscript  test.py
(+7693 files in other folders)
